--- a/server/public/views/404.ejs
+++ b/server/public/views/404.ejs
@@ -1,38 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
-<head>
-  <title>Pup-Pals</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/style.css" rel="stylesheet">
-  <link rel="icon" href="/styles/pictures/dog-paw.png" type="image/png">
-  <link href="/styles/build/main.css" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-</head>
-
-<body>
-  <div class="container">
-
-    <div class="row">
-      <div class="col-md-4 col-md-offset-4 text-center">
-        <h1 class="oops">Oops</h1>
-        <br>
-        <p><img src="/styles/pictures/404.png" alt=""></p>
-
-        <h2><i class="fa fa-exclamation-triangle" style="color:red"></i> Page not found <small>404 error</small></h2>
-        <br>
-        <p>Well, this is embarrassing.
-        </p>
-        <br>
-        <button class="btn btn-success btn-lg btn-block error-btn"><a class="error-link" href="/">Return to Home</a></button>
-
-      </div>
-
-    </div>
-
-  </div>
-</body>
-
+  <head>
+    <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="styles/style.css" rel="stylesheet">
+  </head>
+  <body>
+    <h1>SORRY PAGE NOT FOUND</h1>
+  </body>
 </html>
