--- a/server/public/views/pet_profile.ejs
+++ b/server/public/views/pet_profile.ejs
@@ -9,12 +9,12 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
-  <link href="/styles/main.css" rel="stylesheet">
+  <link href="/styles/build/main.css" rel="stylesheet">
   <script
   src="https://code.jquery.com/jquery-2.2.4.min.js"
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
   crossorigin="anonymous"></script>
-  <script src="/scripts/pet-profile.js"></script>
+  <script src="/styles/js/pet-profile.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
   <link rel="icon" href="/styles/pictures/dog-paw.png" type="image/png">
 
@@ -37,9 +37,9 @@
 
           </div>
         </div>
-        <div class="col-md-6 text-center owner-profile-col">
-          <button class="btn btn-primary edit btn">Update profile</button>
-          <button class="btn btn-primary back btn">Back to profile</button>
+        <div class="col-md-6 text-center">
+          <button class="edit btn">Update profile</button>
+          <button class="back btn">Back to profile</button>
           <div class="edit-profile">
             <% include partials/_edit_pet_profile.ejs %>
           </div>
@@ -47,21 +47,14 @@
           <style>
             .pup-pic {width: 300px!important;}
           </style>
-          <div class="seperator"></div>
-
           <div class='statuses'> </div>
 
           <% if (user && user.id == person[0].id) { %>
-          <div class="seperator"></div>
           <section class="new-status">
             <h2>Update pup's status</h2>
             <form class="status-form" method="POST" action= "/pet/<%= pup.id %>">
               <textarea name="text" placeholder="Ehhh What's up Doc?"></textarea>
               <input type="submit" value="Update">
-              <input type="file" id="file-input">
-              <textarea class="form-control" name="text" placeholder="Ehhh What's up Doc?"></textarea>
-              <br>
-              <input class="btn btn-primary btn-block" type="submit" value="Update">
               <span class="counter">140</span>
             </form>
           </section>
