--- a/server/views/pet_profile.ejs
+++ b/server/views/pet_profile.ejs
@@ -48,14 +48,15 @@
             .pup-pic {width: 300px!important;}
           </style>
           <div class="seperator"></div>
-          
+
           <div class='statuses'> </div>
 
           <% if (user && user.id == person[0].id) { %>
-          <div class="seperator"></div>              
+          <div class="seperator"></div>
           <section class="new-status">
             <h2>Post new Pup pictures</h2>
             <form class="status-form" method="POST" action= "/pet/<%= pup.id %>">
+              <input class="form-control" type="file" id="file-input">
               <textarea class="form-control" name="text" placeholder="Ehhh What's up Doc?"></textarea>
               <br>
               <input class="btn btn-primary btn-block" type="submit" value="Update">
