--- a/server/views/owner_profile.ejs
+++ b/server/views/owner_profile.ejs
@@ -85,7 +85,7 @@
                     <% include partials/_event.ejs %>
                   <% }) %>
                 <%}else{%>
-                  <p>None</p>
+                  <h3>No Events</h3>
                 <%}%>
             </div>
           </div>
