--- a/styles/src/event_detail.scss
+++ b/styles/src/event_detail.scss
@@ -78,3 +78,19 @@ a.pup-link {
 .img-circle {
   height: 50px; 
 }
+
+@media(max-width: 320px){
+  .event_detail_container {
+    position: static;
+    height: 500px;
+    width: 100%;
+  }
+}
+
+@media(max-width: 320px){
+  .detail_right_sidebar {
+    position: static;
+    height: 500px;
+    width: 100%;
+  }
+}
