--- a/styles/src/owner_profile.scss
+++ b/styles/src/owner_profile.scss
@@ -10,6 +10,7 @@
   display: block;
   width: 380px;
   overflow-y: scroll;
+
 }
 
 .left_sidebar {
@@ -79,4 +80,28 @@
 
 .owner-profile-col {
   padding: 0 50px;
+}
+
+@media (max-width: 320px) {
+  .left_sidebar{
+    position: static;
+    height: 500px;
+    width: 100%
+  }
+}
+
+@media (max-width:320px) {
+  .right_sidebar{
+    position: static;
+    height: 500px;
+    width: 100%;
+  }
+}
+
+@media (max-width:320px) {
+  .owner-profile-col {
+    position: static;
+    height: 500px;
+    width: 100%;
+  }
 }
