fix bug for signing up with empty form

--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -40,7 +40,7 @@
                         <input class="form-control" type="password" name="password" placeholder="Password">
                       </div>
                     </p>
-                    <button type="submit" class="btn btn-lg btn-primary btn-block">Login</button>
+                    <button type="submit" class="login btn btn-lg btn-primary btn-block">Login</button>
                   </form>
             </div>
           </div>
@@ -48,5 +48,11 @@
       </div>
     </div>
 </body>
+
+<script>
+  $('.form-group').on('submit', function() {
+    $('.login').prop('disabled', true)
+  })
+</script>
 
 </html>
