--- a/server/views/signup.ejs
+++ b/server/views/signup.ejs
@@ -34,35 +34,40 @@
                     </div>
                   </p>
                   <p>
-                    <div class="input-group">  
-                      <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>                                        
+                    <div class="input-group">
+                      <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
                       <input class="form-control" type="text" name="username" placeholder="Username">
-                    </div>                    
+                    </div>
                   </p>
                   <p>
-                    <div class="input-group">  
-                      <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>                                        
+                    <div class="input-group">
+                      <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
                       <input class="form-control" type="text" name="name" placeholder="Name">
-                    </div>    
+                    </div>
                   </p>
                   <p>
-                    <div class="input-group">  
-                      <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>                                        
+                    <div class="input-group">
+                      <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
                       <input class="form-control" type="text" name="email" placeholder="Email">
-                    </div>  
+                    </div>
                   </p>
                   <p>
-                    <div class="input-group">  
-                      <span class="input-group-addon"><i class="fa fa-lock fa" aria-hidden="true"></i></span>                                        
+                    <div class="input-group">
+                      <span class="input-group-addon"><i class="fa fa-lock fa" aria-hidden="true"></i></span>
                       <input class="form-control" type="text" name="password" placeholder="Password">
-                    </div>  
+                    </div>
                   </p>
-                  <button type="submit" class="btn btn-lg btn-primary btn-block">Sign Up</button>
+                  <button type="submit" class="signup btn btn-lg btn-primary btn-block">Sign Up</button>
                 </form>
           </div>
         </div>
       </div>
     </div>
 </body>
+<script>
+  $('.form-group').on('submit', function() {
+    $('.signup').prop('disabled', true)
+  })
+</script>
 
 </html>
