--- a/server/views/partials/_event.ejs
+++ b/server/views/partials/_event.ejs
@@ -12,11 +12,13 @@
       <span class="smalldetails-body"><i class="fa fa-sticky-note" aria-hidden="true"></i> <%= event.description %></span>
     </div>
     <div class="smalldetails-footer">
-      <% if (user) { %>
+      <% if (user&&user.id===person.id) { %>
       <form action="/events/<%=event.id%>/cancel" method="POST" >
         <button type="submit" class="btn btn-danger rsvp-btn">Can't Go</button>
       </form>
-      <% } %>
+      <% }else{ %>
+        <a class="btn btn-primary rsvp-btn" href="/events/<%=event.id%>">Check it Out</a>
+      <%}%>
     </div>
   </div>
   </a>
