Adds preloaders to pages, fix bug in seed

--- a/server/views/calendar.ejs
+++ b/server/views/calendar.ejs
@@ -13,7 +13,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="icon" href="/styles/pictures/dog-paw.png" type="image/png">
     <script src='/styles/js/calendar.js'></script>
-    
+
     <style>
       body {
         margin-top: 90px;
@@ -22,25 +22,25 @@
         font-family: "Helvetica Nueue",Arial,Verdana,sans-serif;
         background-color: #DDDDDD;
         }
-        
+
       #wrap {
         width: 1100px;
         margin: 0 auto;
       }
-        
+
       #external-events {
         float: left;
         width: 150px;
         padding: 0 10px;
         text-align: left;
       }
-        
+
       #external-events h4 {
         font-size: 16px;
         margin-top: 0;
         padding-top: 1em;
       }
-        
+
       .external-event { /* try to mimick the look of a real event */
         margin: 10px 0;
         padding: 2px 4px;
@@ -49,13 +49,13 @@
         font-size: .85em;
         cursor: pointer;
         }
-        
+
       #external-events p {
         margin: 1.5em 0;
         font-size: 11px;
         color: #666;
       }
-        
+
       #external-events p input {
         margin: 0;
         vertical-align: middle;
@@ -73,6 +73,14 @@
   </head>
   <body>
     <% include partials/_calendar_nav.ejs %>
+    <div class="animationload">
+      <div class="loader">&nbsp;</div>
+    </div>
+    <script>
+      $(window).ready(function() {
+          $('.animationload').hide();
+      });
+    </script>
     <div id='wrap'>
     <div id='calendar'></div>
     <div style='clear:both'></div>
