--- a/server/views/search.ejs
+++ b/server/views/search.ejs
@@ -8,22 +8,23 @@
   <!-- Google Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
+
   <!-- Bootstrap core CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <!-- Custom styles for this template -->
   <link href="/styles/build/main.css" rel="stylesheet">
   <link rel="icon" href="/styles/pictures/dog-paw.png" type="image/png">
 </head>
-
-<body>   
+<body>
   <% include partials/_navbar.ejs%>
-  <div id="react-root"></div>
+  <div id="react-root"><img src="https://s3-us-west-1.amazonaws.com/puppals/preloader.gif"></div>
   <script src="/socket.io/socket.io.js"></script>
   <% if (process.env.NODE_ENV === 'production') { %>
     <script src="/searchReact/search.js"></script>
   <% } else { %>
     <script src="http://localhost:10002/search.js"></script>
   <% } %>
+
 </body>
 
 
