--- a/server/views/pet_register.ejs
+++ b/server/views/pet_register.ejs
@@ -15,6 +15,14 @@
 
 <body>
   <% include partials/_navbar.ejs%>
+  <div class="animationload">
+    <div class="loader">&nbsp;</div>
+  </div>
+  <script>
+    $(window).ready(function() {
+        $('.animationload').hide();
+    });
+  </script>
     <div class="container">
       <div class="row">
         <div class="registerdiv">
