--- a/server/views/signup.ejs
+++ b/server/views/signup.ejs
@@ -16,6 +16,15 @@
 
 <body>
   <% include partials/_navbar.ejs%>
+
+  <div class="animationload">
+    <div class="loader">&nbsp;</div>
+  </div>
+  <script>
+    $(window).ready(function() {
+        $('.animationload').hide();
+    });
+  </script>
     <div class="container">
       <div class="row">
         <div class="registerdiv">
