--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -187,12 +187,12 @@ section {
     font-size: 24px;
     text-align: center;
     position:absolute;
-    left:50%; 
-    top:50%; 
-    background-image:url(../img/preloader.gif); 
+    left:50%;
+    top:50%;
+    background-image:url(https://s3-us-west-1.amazonaws.com/puppals/preloader.gif);
     background-repeat:no-repeat;
     background-position:center;
-    margin:-100px 0 0 -100px; 
+    margin:-100px 0 0 -100px;
 }
 
 /* 5 Navigation
@@ -384,11 +384,11 @@ section.home-section{
     overflow: hidden;
 }
 .item-img-wrap img{
-    -webkit-transition:all 200ms linear; 
-    -moz-transition:all 200ms linear; 
-    -o-transition:all 200ms linear; 
-    -ms-transition:all 200ms linear; 
-    transition:all 200ms linear; 
+    -webkit-transition:all 200ms linear;
+    -moz-transition:all 200ms linear;
+    -o-transition:all 200ms linear;
+    -ms-transition:all 200ms linear;
+    transition:all 200ms linear;
     -webkit-border-top-left-radius: 5px;
 	-webkit-border-top-right-radius: 5px;
 	-moz-border-radius-topleft: 5px;
@@ -421,10 +421,10 @@ section.home-section{
     opacity: 1;
 }
 .item-img-wrap:hover img{
-    -moz-transform: scale(1.1); 
-    -webkit-transform: scale(1.1); 
-    -o-transform: scale(1.1); 
-    transform: scale(1.1); 
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
 }
 .work-desc{
     width: 100%;
@@ -658,7 +658,7 @@ section.home-section{
 
 /*==================================
 STYLE SWITHER - Demo purpose only
-==================================*/ 
+==================================*/
 
 #style-switcher div h3 {
     color: #1D1D1D;
