--- a/styles/src/color.scss
+++ b/styles/src/color.scss
@@ -1,4 +1,5 @@
-$navbar-color: #5BB3BC;
+$navbar-color: #83D1EB;
 $navbar-text: white;
-$accent-color: #3682BC;
-
+$accent-color: #6182C3;
+$button-primary: #337ab7;
+$button-primary-hover: #66aac1;
