--- a/styles/src/owner_profile.scss
+++ b/styles/src/owner_profile.scss
@@ -5,7 +5,7 @@
   right: 0;
   bottom: 0px;
   z-index: 100;
-  background: #fff;
+  background: #f7f8f9;
   left: auto;
   display: block;
   width: 380px;
@@ -20,7 +20,7 @@
   left: 0;
   bottom: 0px;
   z-index: 100;
-  background: #fff;
+  background: #f7f8f9;
   right: auto;
   display: block;
   width: 380px;
