--- a/styles/src/sidebar.scss
+++ b/styles/src/sidebar.scss
@@ -5,7 +5,7 @@
   right: 0;
   bottom: 0;
   z-index: 100;
-  background: #fff;
+  background: #DDDDDD;
   left: auto;
   display: block;
   width: 380px;
