--- a/server/views/owner_profile.ejs
+++ b/server/views/owner_profile.ejs
@@ -27,6 +27,8 @@
         <div class="row">
           <div class="col-md-3 text-center">
             <div class="left_sidebar">
+              <h3>My Pups</h3>
+              <div class="seperator"></div>
               <% pups.forEach(function(item){ %>
                 <% const pup = item; %>
                   <a href="/pet/<%=pup.id%>">
