calendar nav logo color

--- a/styles/src/home.scss
+++ b/styles/src/home.scss
@@ -50,13 +50,13 @@
 //   background-color: $button-primary-hover;
 // }
 .btn-primary:disabled {
-  background-color: #32a34e;  
+  background-color: #5cb85c;  
 }
 .btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled.focus, .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary[disabled].focus,
   fieldset[disabled] .btn-primary:hover,
   fieldset[disabled] .btn-primary:focus,
   fieldset[disabled] .btn-primary.focus {
-    background-color: #32a34e;
+    background-color: #5cb85c;
   }
 
 a.error-link {
