--- a/server/views/partials/_calendar_nav.ejs
+++ b/server/views/partials/_calendar_nav.ejs
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="/">
-      <span class="logo">P U P <i class="fa fa-paw"></i> P A L S</span>
+      <span class="logo">P U P <i class="fa fa-paw logo-paw"></i> P A L S</span>
       </a>
     </div>
 
