--- a/server/views/calendar.ejs
+++ b/server/views/calendar.ejs
@@ -9,6 +9,7 @@
     <script src='/styles/js/jquery-ui.custom.min.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script src='/styles/js/fullcalendar.js'></script>
+    <link href="/styles/css/style.css" rel="stylesheet">
     <link href="/styles/build/main.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="icon" href="/styles/pictures/dog-paw.png" type="image/png">
