--- a/server/views/event_detail.ejs
+++ b/server/views/event_detail.ejs
@@ -9,6 +9,7 @@
 
   <!-- Bootstrap core CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+  <link href="/styles/css/style.css" rel="stylesheet">
   <link href="/styles/build/main.css" rel="stylesheet">
   <link rel="icon" href="/styles/pictures/dog-paw.png" type="image/png">
 </head>
