--- a/server/views/calendar.ejs
+++ b/server/views/calendar.ejs
@@ -86,5 +86,6 @@
     <div id='calendar'></div>
     <div style='clear:both'></div>
     </div>
+    <script src="/styles/js/app.js" type="text/javascript"></script>
   </body>
 </html>
