font for nav, buttons

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -40,9 +40,9 @@
             <h1 class="intro-title">Pups Need Pals<span class="element" data-elements="for your puppy"></span></h1>
             <p class="intro-text"></p>
             <div class="btn-bar">
-              <a href="/events" class="btn btn-custom-outline">Find a Pup Party</a>
+              <a href="/events" class="btn btn-primary btn-lg">Find a Pup Party</a>
               <%if(user){%>
-                <a href='#' class="btn btn-custom-outline" data-toggle="modal" data-target="#myModal">Create a Pup Party</a>
+                <a href='#' class="btn btn-large btn-outline btn-outline-white margin-left-8" data-toggle="modal" data-target="#myModal">Create a Pup Party</a>
               <%}else{%>
                 <a href='/user/login' class="btn btn-custom-outline">Create a Pup Party</a>
               <%}%>
