--- a/styles/src/main.scss
+++ b/styles/src/main.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Assistant:800');
 @import "color";
 @import "../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "home";
