add random puppy feature to homepage
add more data to the seed

--- a/styles/src/home.scss
+++ b/styles/src/home.scss
@@ -28,7 +28,8 @@
 
 .featured-title {
   color: black;
-  font-size: 3em;
+  font-size: 2em;
+  font-family: 'Assistant', sans-serif;
   font-weight: 400;
 }
 
