bug fixes and improvements

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -88,7 +88,7 @@
                 <h4 class="featured-title"><%=pup.name%></h4>
               </a>
                 <p ><%=pup.breed%></p>
-                <img src="<%=pup.avatar_url%>">
+                <img style="height:200px;" src="<%=pup.avatar_url%>">
             </div>
         </div>
       </div>
