--- a/server/views/signup.ejs
+++ b/server/views/signup.ejs
@@ -39,7 +39,7 @@
                   <p>
                     <div class="input-group">
                       <span class="input-group-addon"><i class="fa fa-address-book fa" aria-hidden="true"></i></span>
-                      <input class="form-control" type="text" name="avatar_url" placeholder="Avatar URL">
+                      <input class="form-control" type="url" name="avatar_url" placeholder="Avatar URL">
                     </div>
                   </p>
                   <p>
@@ -57,13 +57,13 @@
                   <p>
                     <div class="input-group">
                       <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
-                      <input class="form-control" type="text" name="email" placeholder="Email">
+                      <input class="form-control" type="email" name="email" placeholder="Email">
                     </div>
                   </p>
                   <p>
                     <div class="input-group">
                       <span class="input-group-addon"><i class="fa fa-lock fa" aria-hidden="true"></i></span>
-                      <input class="form-control" type="text" name="password" placeholder="Password">
+                      <input class="form-control" type="password" name="password" placeholder="Password">
                     </div>
                   </p>
                   <button type="submit" class="signup btn btn-lg btn-primary btn-block">Sign Up</button>
