Adds changes to app.jsx re: loader gif

--- a/server/views/calendar.ejs
+++ b/server/views/calendar.ejs
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='/styles/css/fullcalendar.css' rel='stylesheet' />
-    <script src='/styles/js/jquery-1.10.2.js'></script>
-    <script src='/styles/js/jquery-ui.custom.min.js'></script>
+    <script src='/scripts/jquery-1.10.2.js'></script>
+    <script src='/scripts/jquery-ui.custom.min.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
-    <script src='/styles/js/fullcalendar.js'></script>
-    <link href="/styles/css/style.css" rel="stylesheet">
-    <link href="/styles/build/main.css" rel="stylesheet">
+    <script src='/scripts/fullcalendar.js'></script>
+    <link href="/styles/style.css" rel="stylesheet">
+    <link href="/styles/main.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="icon" href="/styles/pictures/dog-paw.png" type="image/png">
-    <script src='/styles/js/calendar.js'></script>
+    <script src='/scripts/calendar.js'></script>
 
     <style>
       body {
@@ -86,6 +86,6 @@
     <div id='calendar'></div>
     <div style='clear:both'></div>
     </div>
-    <script src="/styles/js/app.js" type="text/javascript"></script>
+    <script src="/scripts/app.js" type="text/javascript"></script>
   </body>
 </html>
