--- a/server/views/partials/_puppy.ejs
+++ b/server/views/partials/_puppy.ejs
@@ -1,7 +1,7 @@
 <div class="puppy-card">
   <div class="puppy-box">
     <a href="/pet/<%=pup.id%>">
-    <img class="main-pup-pic"src="<%= pup.avatar_url %>" style="width:200px">
+    <img class="main-pup-pic"src="<%= pup.avatar_url %>" style="width:100px; height: 100px">
       <h2><%= pup.name %></h2>
     </a>
     <div>
