--- a/styles/src/event_detail.scss
+++ b/styles/src/event_detail.scss
@@ -98,3 +98,12 @@ a.pup-link {
 .pac-container {
     z-index: 10000 !important;
 }
+
+.regular {
+  color: $accent-color;
+}
+
+.rsvped {
+  color: $logo-color;
+  background-color: #AAD7D2;
+}
