--- a/styles/src/puppy_profile.scss
+++ b/styles/src/puppy_profile.scss
@@ -15,7 +15,8 @@
 }
 
 .main-pup-pic {
-  border-radius: 50px;
+  border-radius: 50%;
   margin-top: 40px;
-  height: 150px;
+  height: 100px;
+  width: 100px;
 }
